[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1"
itertools = "^0"
clap = { version = "^4", features = ["derive"] } # TODO CLI only dependencies
num = "^0"                                       # TODO CLI only dependencies

[dev-dependencies]
num = "^0"
